# phonharp

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/unimi/lim/hmi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: timbre-list.json
app/src/main/cpp/: CMakeLists.txt  EnvelopeGenerator.h  Filters.h  FrequencyAdder.h  Mix.h  OboeSinePlayer.cpp  OboeSinePlayer.h  OboeSinePlayer_old.cpp  OboeSynthMain.cpp  OboeSynthMain.h  Oscillator.h  OscillatorWrapper.h  Oscillators.h  Oscillators_old.h  PitchEnvelope.h  SampleGenerator.h  SmoothedAmpParameter.h  SmoothedFrequency.h  SmoothedParameter.h  SmoothedPhaseParameter.h  Synth.h  native-lib.cpp
app/src/main/cpp/shared/: Oscillator.h  SynthSound.h
app/src/main/java/com/unimi/lim/hmi/: KeyboardActivity.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/unimi/lim/hmi/dao/: TimbreDao.java
app/src/main/java/com/unimi/lim/hmi/entity/: Timbre.java  TimbreCfg.java
app/src/main/java/com/unimi/lim/hmi/keyboard/: BaseKeyHandler.java  DelayedKeyHandler.java  KeyHandler.java  ThreadedKeyHandler.java
app/src/main/java/com/unimi/lim/hmi/music/: KeyHandler.java  Note.java  PanMode.java  Scale.java
app/src/main/java/com/unimi/lim/hmi/synthetizer/: KeyHandler.java  OboeSynth.java  Synthesizer.java  SynthesizerOld.java  WaveForm.java
app/src/main/res/drawable/: ic_uncheck_white_24dp.xml
app/src/main/res/layout/: activity_about.xml  activity_keyboard.xml  activity_main.xml  activity_timbre_detail.xml  activity_timbre_list.xml  activity_timbre_list_edit.xml  activity_timbre_list_select.xml  fragment_timbre_detail.xml  fragment_timbre_list.xml  fragment_timbre_list_item.xml  include_equalizer.xml  include_harmonics_asr.xml  include_hysteresis.xml  include_pitch_asr.xml  include_portamento.xml  include_pwm.xml  include_swipe_control.xml  include_tremolo.xml  include_vibrato.xml  include_volume_asr.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/android/util/: Log.java
app/src/test/java/com/unimi/lim/hmi/: ConversionUtilsUnitTest.java  LFOUnitTest.java  NoteUtilsUnitTest.java  OboeSynthUnitTest.java  ScaleUnitTest.java  SynthModuleUnitTest.java  SynthTest.java  SynthUnitTest.java  TimbreDaoUnitTest.java  TimbreUnitTest.java
app/src/test/resources/: timbre-list.json
gradle/wrapper/: gradle-wrapper.properties
(+33 files in other folders)
